--- a/src/Paseto.Tests/Paseto.Tests.csproj
+++ b/src/Paseto.Tests/Paseto.Tests.csproj
@@ -14,6 +14,8 @@
     <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
 
     <PackageTags>paseto dotnet netstandard netcore</PackageTags>
+
+    <PackageProjectUrl>https://github.com/idaviddesmet/paseto-dotnet</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
