--- a/src/Paseto/Paseto.csproj
+++ b/src/Paseto/Paseto.csproj
@@ -6,7 +6,7 @@
     <Authors>David De Smet</Authors>
     <Company />
     <Copyright>Copyright © 2018 David De Smet</Copyright>
-    <PackageTags>paseto dotnet netstandard netcore</PackageTags>
+    <PackageTags>paseto dotnet dotnet-core netstandard</PackageTags>
     <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
     <Version>0.5.0</Version>
     <PackageProjectUrl>https://github.com/idaviddesmet/paseto-dotnet</PackageProjectUrl>
