--- a/src/Paseto.Cryptography/Paseto.Cryptography.csproj
+++ b/src/Paseto.Cryptography/Paseto.Cryptography.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.5.3</Version>
+    <TargetFrameworks>netstandard2.0;net47</TargetFrameworks>
+    <Version>0.5.4</Version>
     <Authors>David De Smet</Authors>
     <Company />
     <Description>Cryptography library for Paseto.Core</Description>
