--- a/src/Paseto.Cryptography/Paseto.Cryptography.csproj
+++ b/src/Paseto.Cryptography/Paseto.Cryptography.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <TargetFrameworks Condition="'$(OS)' != 'Unix'">net47;netstandard2.0</TargetFrameworks>
-    <Version>0.6.1</Version>
+    <Version>0.7.0</Version>
     <Authors>David De Smet</Authors>
     <Company />
     <Description>Cryptography library for Paseto.Core</Description>
@@ -11,6 +11,9 @@
     <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
     <PackageTags>paseto dotnet dotnet-core netstandard</PackageTags>
     <PackageProjectUrl>https://github.com/idaviddesmet/paseto-dotnet</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/idaviddesmet/paseto-dotnet.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryBranch>master</RepositoryBranch>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
