--- a/src/Paseto.Cryptography/Paseto.Cryptography.csproj
+++ b/src/Paseto.Cryptography/Paseto.Cryptography.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
-    <TargetFrameworks Condition="'$(OS)' != 'Unix'">net47;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks Condition="'$(OS)' != 'Unix'">net46;net47;netstandard2.0</TargetFrameworks>
     <Version>0.7.1</Version>
     <Authors>David De Smet</Authors>
     <Company />
