--- a/tests/Paseto.Tests/Paseto.Tests.csproj
+++ b/tests/Paseto.Tests/Paseto.Tests.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.5.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+    <PackageReference Include="Portable.BouncyCastle" Version="1.9.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.categories" Version="2.0.6" />
     <PackageReference Include="xunit.runner.console" Version="2.4.1">
