Begin rewrite Paseto Builder tests

--- a/.gitignore
+++ b/.gitignore
@@ -289,3 +289,21 @@ __pycache__/
 
 # Visual Studio Code
 *.vscode
+
+# OpenCover UI analysis results
+OpenCover/
+
+# Azure Stream Analytics local run output
+ASALocalRun/
+
+# MSBuild Binary and Structured Log
+*.binlog
+
+# NVidia Nsight GPU debugger configuration file
+*.nvuser
+
+# MFractors (Xamarin productivity tool) working folder
+.mfractor/
+
+# macOS related system files
+.DS_Store
