--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,9 @@
-version: 0.7.1.{build}
+version: 1.0.0.{build}
 pull_requests:
   do_not_increment_build_number: true
-image: Visual Studio 2017
+image: Visual Studio 2019
 before_build:
-  - cmd: dotnet restore src
+  - cmd: dotnet restore
 build:
   verbosity: minimal
 only_commits:
