--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,8 @@ jobs:
       run: dotnet cake --target=Test
     - name: 'Pack NuGet'
       run: dotnet cake --target=Pack
+    - name: 'Upload Coverage'
+      uses: codecov/codecov-action@v2
     - name: 'Publish Artifacts'
       uses: actions/upload-artifact@v1.0.0
       with:
