--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,15 @@
 name: CI
 
+env:
+  # Disable the .NET logo in the console output.
+  DOTNET_NOLOGO: true
+  # Disable the .NET first time experience to skip caching NuGet packages and speed up the build.
+  DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
+  # Disable sending .NET CLI telemetry to Microsoft.
+  DOTNET_CLI_TELEMETRY_OPTOUT: true
+
+  BUILD_ARTIFACT_PATH: './Artifacts'
+
 on:
   # Trigger the workflow on push or pull request,
   # but only for the master branch
@@ -52,43 +62,68 @@ jobs:
       run: git fetch --tags
     - name: 'Install .NET SDK'
       uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: |
+          5.0.x
+          6.0.x
     - name: '.NET Restore'
-      run: dotnet tool restore
+      run: dotnet restore
     - name: 'Build Project'
       run: dotnet cake --target=Build
     - name: 'Run Unit Tests'
       run: dotnet cake --target=Test
     - name: 'Pack NuGet'
       run: dotnet cake --target=Pack
-    - name: 'Upload Coverage'
-      uses: codecov/codecov-action@v2
     - name: 'Publish Artifacts'
-      uses: actions/upload-artifact@v1.0.0
+      uses: actions/upload-artifact@v2
       with:
         name: ${{matrix.os}}
-        path: './Artifacts'
+        path: ${{env.BUILD_ARTIFACT_PATH}}
 
-  push-github-packages:
+  coverage:
+    name: 'Process Coverage'
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: 'Download Artifact'
+        uses: actions/download-artifact@v2
+      - name: 'Run Report Coverage Generator'
+        run: dotnet cake --target=CoverageReport
+      - name: 'Upload Coverage'
+        uses: codecov/codecov-action@v2
+        with:
+          file: coverage.cobertura.xml
+          fail_ci_if_error: false
+
+  push-to-github-packages:
     name: 'Push GitHub Packages'
     needs: build
     if: github.ref == 'refs/heads/master' || github.event_name == 'release'
+    environment:
+      name: 'GitHub Packages'
+      url: https://github.com/daviddesmet/paseto-dotnet/packages
+    permissions:
+      packages: write
     runs-on: windows-latest
     steps:
       - name: 'Download Artifact'
-        uses: actions/download-artifact@v1
+        uses: actions/download-artifact@v2
         with:
           name: 'windows-latest'
       - name: 'NuGet Push'
         run: dotnet nuget push .\windows-latest\*.nupkg --source https://nuget.pkg.github.com/daviddesmet/index.json --skip-duplicate --api-key ${{secrets.GITHUB_TOKEN}}
 
-  push-nuget:
+  push-to-nuget:
     name: 'Push NuGet Packages'
     needs: build
     if: github.event_name == 'release'
+    environment:
+      name: 'NuGet'
+      url: https://www.nuget.org/packages/Paseto.Core
     runs-on: windows-latest
     steps:
       - name: 'Download Artifact'
-        uses: actions/download-artifact@v1
+        uses: actions/download-artifact@v2
         with:
           name: 'windows-latest'
       - name: 'NuGet Push'
