Added github path to actions filter

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ on:
     branches:
       - master
     paths:
+     - '.github/**'
      - 'src/**'
      - build.cake
      - CodeCoverage.runsettings
