--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
       run: dotnet cake --target=Test
       if: ${{ false }} # always skip since coverage is somehow always empty in GitHub Actions
     - name: 'Run Unit Tests'
-      run: dotnet test --no-restore /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=${{env.BUILD_ARTIFACT_PATH}}/coverage.opencover.xml
+      run: dotnet test -f net6.0 --no-restore /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=${{env.BUILD_ARTIFACT_PATH}}/coverage.opencover.xml
     - name: 'Run Test Report'
       uses: zyborg/dotnet-tests-report@v1
       with:
