Exclude coverage history from upload

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,7 +86,9 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: ${{matrix.os}}
-        path: ${{env.BUILD_ARTIFACT_PATH}}
+        path: |
+          ${{env.BUILD_ARTIFACT_PATH}}
+          !${{env.BUILD_ARTIFACT_PATH}}/**/In/**/*
 
   coverage:
     name: 'Process Coverage'
