--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,17 +95,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-    - name: 'Checkout'
-      uses: actions/checkout@v2
     - name: 'Download Artifact'
       uses: actions/download-artifact@v3
       with:
         name: 'ubuntu-latest'
-        path: ${{env.BUILD_ARTIFACT_PATH}}
-    - name: '.NET Restore'
-      run: dotnet tool restore
-    - name: 'Run Coverage Report'
-      run: dotnet cake --target=CoverageReport
+    - name: 'Install ReportGenerator'
+      run: dotnet tool install -g dotnet-reportgenerator-globaltool
+    - name: 'Generate Coverage Report'
+      run: reportgenerator -reports:*/TestResults/**/coverage.cobertura.xml -targetdir:${{env.BUILD_ARTIFACT_PATH}}/TestResults/Coverage/Reports -reporttypes:HtmlInline;HTMLChart;Cobertura
     - name: 'Upload Coverage'
       uses: codecov/codecov-action@v2
       with:
