--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,6 +116,27 @@ jobs:
         name: 'coverage-report'
         path: ${{env.BUILD_ARTIFACT_PATH}}
 
+  benchmark:
+    name: 'Benchmarks'
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - name: 'Run Benchmarks'
+      run: cd benchmarks/Paseto.Benchmark && dotnet run -f --exporters json --filter '*'
+    - name: 'Store benchmark result'
+      uses: rhysd/github-action-benchmark@v1
+      with:
+        name: Benchmark.Net Benchmark
+        tool: 'benchmarkdotnet'
+        output-file-path: benchmarks/Paseto.Benchmark/Paseto.Benchmark.Artifacts/results/Paseto.Benchmark.Benchmarks-report-full-compressed.json
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        auto-push: true
+        # Show alert with commit comment on detecting possible performance regression
+        alert-threshold: '200%'
+        comment-on-alert: true
+        fail-on-alert: true
+        alert-comment-cc-users: '@daviddesmet'
+
   push-to-github-packages:
     name: 'Push GitHub Packages'
     needs: build
