--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -121,6 +121,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: coverage
     steps:
+    - name: 'Checkout'
+      uses: actions/checkout@v1
     - name: 'Run Benchmarks'
       run: cd benchmarks/Paseto.Benchmark && dotnet run -f --exporters json --filter '*'
     - name: 'Store Benchmark Result'
