--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,13 +131,15 @@ jobs:
         name: Benchmark.Net Benchmark
         tool: 'benchmarkdotnet'
         output-file-path: benchmarks/Paseto.Benchmark/BenchmarkDotNet.Artifacts/results/Benchmarks-report-full-compressed.json
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        auto-push: true
+        auto-push: false
         # Show alert with commit comment on detecting possible performance regression
         alert-threshold: '200%'
         comment-on-alert: true
         fail-on-alert: true
         alert-comment-cc-users: '@daviddesmet'
+    - name: 'Push Benchmark Result'
+      run: git push 'https://daviddesmet:${{ secrets.GITHUB_TOKEN }}@github.com/daviddesmet/paseto-dotnet.git' gh-pages:gh-pages
+      if: ${{ false }} # always skip for now
 
   push-to-github-packages:
     name: 'Push GitHub Packages'
